<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#F57c00"
	android:orientation="vertical"
	tools:context=".MainActivity">
	
	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="243dp">
		
		<TextView
			android:id="@+id/txt_woofpets"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:fontFamily="sans-serif-black"
			android:gravity="center"
			android:text="@string/txt_woofpets_String"
			android:textSize="48sp"
			android:textStyle="bold" />
		
		<ImageView
			android:id="@+id/View_logo1"
			android:layout_width="188dp"
			android:layout_height="304dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:contentDescription="@string/imagen"
			app:srcCompat="@drawable/pyg1" />
	</FrameLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="585dp"
		android:background="#FFFFFF"
		android:orientation="vertical">
		
		<TextView
			android:id="@+id/txt_recuperar_pass_string"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/txt_recuperar_pass_string"
			android:textColor="#212121"
			android:textSize="34sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toBottomOf="@+id/View_blanco"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/txt_woofpets"
			app:layout_constraintVertical_bias="0.0" />
		
		
		<TextView
			android:id="@+id/txt_digite"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/txt_digite"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="#212121"/>
		
		<EditText
			android:id="@+id/txt_email"
			android:layout_width="300dp"
			android:layout_height="55dp"
			android:layout_gravity="center"
			android:layout_marginTop="28dp"
			android:background="@drawable/border_correo"
			android:drawableStart="@drawable/ic_email"
			android:drawablePadding="12dp"
			android:hint="@string/txt_email_String"
			android:importantForAutofill="no"
			android:inputType="textEmailAddress"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:textColor="@color/black"
			android:textColorHint="@color/darker_gray"
			android:textSize="20sp"
			android:textStyle="bold"
			tools:ignore="TextContrastCheck" />
		
		
		<Button
			android:id="@+id/button_enviar_String"
			android:layout_width="300dp"
			android:layout_height="55dp"
			android:layout_gravity="center"
			android:layout_marginTop="20dp"
			android:text="@string/button_enviar_String"
			android:textSize="24sp"
			app:backgroundTint="#F57C00"
			tools:ignore="TextContrastCheck" />
		
		<TextView
			android:id="@+id/login_recuperar"
			android:layout_width="300dp"
			android:layout_height="30dp"
			android:layout_gravity="center"
			android:layout_marginTop="20dp"
			android:gravity="center"
			android:text="@string/login_recuperar"
			android:textColor="@color/black"
			android:textSize="20sp"
			android:textStyle="bold" />
		
		<TextView
			android:id="@+id/registro_recuperar"
			android:layout_width="300dp"
			android:layout_height="30dp"
			android:layout_gravity="center"
			android:layout_marginTop="20dp"
			android:gravity="center"
			android:text="@string/registro_recuperar"
			android:textColor="@color/black"
			android:textSize="20sp"
			android:textStyle="bold" />
	
	
	</LinearLayout>
	
	

</LinearLayout>